:recycle: Improve hotelsController latlng param
